backend/k8s-prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gameai-prod
  labels:
    name: gameai-prod
    environment: Production
